@@ -31,6 +31,7 @@ dpkg (1.17.6) UNRELEASED; urgency=low
   * Allow updating checksums in Dpkg::Checksums without erroring out.
   * Add shell hooks support to dpkg-buildpackage, based on the debuild
     implementation in devscripts 2.13.9. Closes: #476221
+  * Add support for Testsuite source field.
 
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
